# nano-gpt

./: .gitignore  README.md  pyproject.toml
nano_gpt/: bigram.py  bigram_neural_network.py  models.py  plot_utils.py  tokenizer.py  train.py  training_set_creator.py
nano_gpt/__tests/: test_multilayer_nn_probabilistic_language_model.py
notebooks/: Bigram_LM.ipynb  multi layer perceptron.ipynb
